custom-resource-consumers/takeout/apps/media/plex/secondary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex-secondary
  namespace: media
  labels:
    app: plex-secondary
spec:
  replicas: 1 # active longhorn-plex nas
  selector:
    matchLabels:
      app: plex-secondary
  serviceName: plex-secondary
  template:
    metadata:
      annotations: {}
      labels:
        app: plex-secondary
    spec:
      containers:
      - name: plex-secondary
        image: plexinc/pms-docker:1.31.1.6733-bc0674160 # {"$imagepolicy": "flux-system:plex-secondary"}
        imagePullPolicy: Always
        # command: ["tail","-f","/dev/null"]
        ports:
        - containerPort: 32400
        volumeMounts:
        - mountPath: "/media"
          name: nas-volume1-media
        - mountPath: "/dev/dri"
          name: dri
        - mountPath: "/config"
          name: plex-secondary-config
        - mountPath: "/transcode"
          name: transcode
        # note to myself in the future: this is needed in order to use /dev/dri
        # there is an alternative but it's more work
        securityContext:
          privileged: true
          # supplementalGroups:
          #   - 44
          #   - 109
        resources:
          requests:
            cpu: 100m
          limits:
            memory: 8192Mi
      volumes:
      - name: plex-secondary-config
        persistentVolumeClaim:
          claimName: plex-secondary-config-longhorn-plex
      - name: nas-volume1-media
        persistentVolumeClaim:
          claimName: nas-volume1-media
      - name: dri
        persistentVolumeClaim:
          claimName: dri-pvc
      - name: transcode
        emptyDir: {}
        # medium: Memory
      nodeSelector:
        graphics: dri
        longhorn: primary
        # kubernetes.io/hostname: anchorman
      imagePullSecrets:
      - name: docker-hub
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: "kubernetes.io/hostname"
            labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - "plex"
